clean up in Chapter 4

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -111,6 +111,7 @@ The procedure in \Cref{HopfRingFromOneRingSpectrum} can be generalized to the ca
 \end{remark}
 
 \todo{Does ``Cartesian'' mean anything in this setting?}
+\todo{Section III.11 of Wilson's \textit{Primer} has a synopsis of how additive unstable operations should be treated.}
 \citeme{Bendersky Curtis Miller's~\cite{BCM} \textit{The unstable Adams spectral sequence for generalized homology}}
 \citeme{Boardman Johnson Wilson's~\cite{BJW} \textit{Unstable operations in generalized cohomology}}
 
@@ -434,16 +435,15 @@ Start with a formal line $V$ over a ground ring $k$, let $\G$ denote $V$ equippe
 A different thing we can do is notice that $\Omega^1_{V/k}$ forms the first level of the algebraic de Rham complex $\Omega^*_{V/k}$.  The translation invariant differentials studied in the theory of the logarithm are those differentials so that $\mu^* - \pi_1^* - \pi_2^*$ is zero \emph{at the chain level}.  We can weaken this to request only that that difference be \emph{exact}, or zero at the level of cohomology of the algebraic de Rham complex.  This condition begets a sub--$k$--module $D(\G/k)$ of $H^1_{dR}(\G/k)$ consisting of cohomologically translation invariant $1$--forms.
 
 \begin{example}
-\todo{You switch to talking about $A$ rather than $k$ here, without talking about what happens to your relative K\"ahler differentials.  Be sure to explain why the ``integrality'' in the following Theorem is good for anything.}
 Let $A$ be a $\Z$--flat ring, let $\G$ be a formal group over $A$, and let $x$ be a coordinate on $\G$.  Set $K = A \otimes \Q$, so that $A \to K$ is an injection.  There is then a diagram of exact rows
 \begin{center}
-\begin{tikzcd}
-0 \arrow{r} & Z^1_{dR} \arrow{r} \arrow[-,double]{d} & \{\text{all conceivable integrals}\} \arrow{r} \arrow[-,double]{d} & \{\text{missing integrals}\} \arrow{r} \arrow[-,double]{d} & 0 \\
-0 \arrow{r} & x A\ps{x} \arrow{r} & \left\{ f \in x K\ps{x} \middle| df \in A\ps{x} \right\} \arrow{r}{d} & H^1_{dR}(\G/A) \arrow{r} & 0 \\
-0 \arrow{r} & x A\ps{x} \arrow{r} \arrow[-,double]{u} & \left\{ f \in x K\ps{x} \middle| \begin{array}{c}df \in A\ps{x}, \\ \delta f \in A\ps{x,y} \end{array} \right\} \arrow{u} \arrow{r}{d} & D(\G/A) \arrow{r} \arrow{u} & 0,
+\begin{tikzcd}[column sep=0.5em]
+0 \arrow{r} & \left\{\begin{array}{c}\text{integrals with} \\ \text{$A$ coefficients}\end{array}\right\} \arrow{r} \arrow[-,double]{d} & \{\text{all conceivable integrals}\} \arrow{r} \arrow[-,double]{d} & \{\text{missing integrals}\} \arrow{r} \arrow[-,double]{d} & 0 \\
+0 \arrow{r} & x A\ps{x} \arrow{r} & \left\{ f \in x K\ps{x} \middle| f' \in A\ps{x} \right\} \arrow{r}{d} & H^1_{dR}(\G/A) \arrow{r} & 0 \\
+0 \arrow{r} & x A\ps{x} \arrow{r} \arrow[-,double]{u} & \left\{ f \in x K\ps{x} \middle| \begin{array}{c}f' \in A\ps{x}, \\ \delta f \in A\ps{x,y} \end{array} \right\} \arrow{u} \arrow{r}{d} & D(\G/A) \arrow{r} \arrow{u} & 0,
 \end{tikzcd}
 \end{center}
-where $\delta[\omega] = (\mu^* - \pi_1^* - \pi_2^*)[\omega]$.
+where $\delta$ is induced by $\delta [\omega] = (\mu^* - \pi_1^* - \pi_2^*)[\omega]$.
 \end{example}
 
 % \begin{lemma}
@@ -891,11 +891,7 @@ Maybe talk about some consequences: the Hopkins--Ravenel--Wilson results on fini
 
 Theorem 6.1 of R--W \textit{The Hopf ring for complex bordism} sounds like something related to Quillen's elementary proof.
 
-Section III.11 of Wilson's \textit{Primer} has a synopsis of how additive unstable operations should be treated.  (In particular, he remarks on pp.\ 62-3 that primitives in unstable operations are the \emph{additive} unstable operations, which seems important.)  Possibly this is enough to understand how additive unstable cooperations should be treated, or maybe unstable cooperations generally.
-
 There's also a document by Boardman, Johnson, and Wilson (Chapter 2 of the \textit{Handbook of Algebraic Topology}) that discusses an equivalence between Steve's approach and ``unstable comodules''.  Please read this.
-
-Snowball a discussion of coalgebraic formal schemes into one of these sections.
 
 
 
