--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\chapter{Unstable cooperations}
+\chapter{Unstable cooperations}\label{UnstableCooperationsChapter}
 
 \todo{Write an introduction for me.}
 
@@ -427,12 +427,12 @@ This is an impressively broad theorem: the loopspaces $\OS{MU}{2*}$ are quite co
 
 \section{Dieudonn\'e modules}
 
-Our goal today is strictly algebraic: we have seen that the category of finite dimension Hopf algebras over a ground field $k$ is an abelian category.  This means that it admits a presentation as the module category for some (possibly noncommutative) ring.  The description of this ring and of the explicit assignment from a group scheme to linear algebraic data is the subject of \textit{Dieudonn\'e theory}.  We will give a survey of some of the results of Dieudonn\'e theory today, including three different presentations of the subject.\footnote{Emphasis on ``\emph{some of the results}''.  Dieudonn\'e theory is an enormous subject with many interesting results both internal and connected to arithmetic geometry.}
+Our goal today is strictly algebraic.  Because the category of finite type Hopf algebras over a ground field $k$ is an abelian category, it admits a presentation as the module category for some (possibly noncommutative) ring.  The description of this ring and of the explicit assignment from a group scheme to linear algebraic data is the subject of \textit{Dieudonn\'e theory}.  We will give a survey of some of the results of Dieudonn\'e theory today, including three different presentations of the equivalence.\footnote{Emphasis on ``\emph{some of the results}''.  Dieudonn\'e theory is an enormous subject with many interesting results both internal and connected to arithmetic geometry, which we'll explore almost none of.}
 
 \citeme{Weinstein's geometry of Lubin--Tate spaces notes}
-Start with a formal line $V$ over a ground ring $k$, let $\G$ denote $V$ equipped with a group structure, and let $\Omega^1_{V/k}$ be the module of K\"ahler differentials on $V$.  We have previously been interested in the \textit{invariant differentials} $\omega_{\G} \subseteq \Omega^1_{V/k}$ on $V$.  In the case that $k$ was a $\Q$--algebra, we saw that all differentials can be integrated and hence we gain access to a logarithm for $\G$.  On the other hand, if $k$ has positive characteristic $p$ then there's an obstruction to integrating terms with exponents of the form $-1 \pmod p$, which led us to the notion of $p$--height explored in \Cref{MfgI:Height}.
+Start with a formal line $V$ over a ground ring $A$, let $\G$ denote $V$ equipped with a group structure, and let $\Omega^1_{V/k}$ be the module of K\"ahler differentials on $V$.  We have previously been interested in the \textit{invariant differentials} $\omega_{\G} \subseteq \Omega^1_{V/A}$ on $V$, back when we first discussed logarithms in \Cref{RationalFGLsHaveLogarithms}.  Such a differential gave rise to a logarithm through integration, in the case that $A$ was a $\Q$--algebra.  However, if $A$ had positive characteristic $p$ then there would be an obstruction to integrating terms with exponents of the form $-1 \pmod p$, which in turn led us to the notion of $p$--height explored in \Cref{MfgI:Height}.
 
-A different thing we can do is notice that $\Omega^1_{V/k}$ forms the first level of the algebraic de Rham complex $\Omega^*_{V/k}$.  The translation invariant differentials studied in the theory of the logarithm are those differentials so that $\mu^* - \pi_1^* - \pi_2^*$ is zero \emph{at the chain level}.  We can weaken this to request only that that difference be \emph{exact}, or zero at the level of cohomology of the algebraic de Rham complex.  This condition begets a sub--$k$--module $D(\G/k)$ of $H^1_{dR}(\G/k)$ consisting of cohomologically translation invariant $1$--forms.
+A slightly different twist on this set-up leads to a new story entirely.  Recall that $\Omega^1_{V/A}$ forms the first level of the \textit{algebraic de Rham complex} $\Omega^*_{V/A}$.  The translation invariant differentials studied in the theory of the logarithm are those differentials so that the identity $\mu^* - \pi_1^* - \pi_2^* = 0$ holds \emph{at the chain level}.  We can weaken this to request only that that difference be \emph{exact}, or zero at the level of cohomology of the algebraic de Rham complex.  This condition begets a sub--$A$--module $D(\G/A)$ of $H^1_{dR}(\G/A)$ consisting of those $1$--forms which are cohomologically translation invariant.
 
 \begin{example}
 Let $A$ be a $\Z$--flat ring, let $\G$ be a formal group over $A$, and let $x$ be a coordinate on $\G$.  Set $K = A \otimes \Q$, so that $A \to K$ is an injection.  There is then a diagram of exact rows
@@ -454,10 +454,10 @@ where $\delta$ is induced by $\delta [\omega] = (\mu^* - \pi_1^* - \pi_2^*)[\ome
 % Let $A$ be a complex abelian variety, in which case there is a classical Hodge decomposition \[0 \to H^0(A; \Omega^1) \to H^1_{dR}(A; \C) \to H^1(A; \sheaf O_A) \to 0.\]  The first term agrees with invariant differentials, and the second term agrees with $\operatorname{Lie} A^\vee$.
 % \end{remark}
 
-The flatness condition in the Example above is important to getting the calculation to work out right, and of course it is not satisfied when working over our field $k$ of positive characteristic $p$.  However, de Rham cohomology has the following remarkable lifting property (which we have specialized to $H^1_{dR}$):
+The flatness condition in the Example is important to getting the calculation to work out right, and of course it is not satisfied when working over a perfect field of positive characteristic $p$ --- our favorite setting in \Cref{MfgI:Height} and \Cref{ChapterFiniteSpectra} more generally.  However, de Rham cohomology has the following remarkable lifting property (which we have specialized to $H^1_{dR}$):
 
 \begin{theorem}
-Let $A$ be a $\Z_{(p)}$--flat ring, let $f_1(x), f_2(x) \in A\ps{x}$ be power series without constant term (i.e., pointed maps of formal lines).  If $f_1 \equiv f_2 \pmod{pA}$, then for any differential $\omega \in A\ps{x} dx$ the difference $f_1^*(\omega) - f_2^*(\omega)$ is exact.
+Let $A$ be a $\Z_{(p)}$--flat ring, let $f_1(x), f_2(x) \in A\ps{x}$ be power series without constant term.  If $f_1 \equiv f_2 \pmod{pA}$, then for any differential $\omega \in A\ps{x} dx$ the difference $f_1^*(\omega) - f_2^*(\omega)$ is exact.
 \end{theorem}
 \begin{proof}
 Write $\omega = dg$ for $g \in K\ps{x}$, and write $f_2 = f_1 + p\Delta$.  Then
@@ -465,17 +465,19 @@ Write $\omega = dg$ for $g \in K\ps{x}$, and write $f_2 = f_1 + p\Delta$.  Then
 \int \left( f_2^* \omega - f_1^* \omega \right) & = g(f_2) - g(f_1) = g(f_1 + p\Delta) - g(f_1) \\
 & = \sum_{n = 1}^\infty \frac{(p\Delta)^n}{n!} g^{(n)}(f_1).
 \end{align*}
-Since $g' = \omega$ has coefficients in $A$, so does $g^{(n)}$ for all $n$, and $p^n/n!$ lies in $A$ as well by locality.
+Since $g' = \omega$ has coefficients in $A$, so does $g^{(n)}$ for all $n$, and the fraction $p^n/n!$ lies in the $\Z_{(p)}$--algebra $A$.
 \end{proof}
 
 \begin{corollary}[{$H^1_{dR}$ is ``crystalline''}]\label{H1dRIsCrystalline}
 If $f_1, f_2\co V \to V'$ are maps of pointed formal varieties which agree mod $p$, then they induce the same map on $H^1_{dR}$. \qed
 \end{corollary}
 
-Several more results follow from \Cref{H1dRIsCrystalline}.  For instance, any map $f\co \G' \to \G$ of pointed varieties which is a group homomorphism mod $p$ restricts to give a map $f^*\co D(\G/A) \to D(\G'/A)$.  Additionally, if $f_1$, $f_2$, and $f_3$ are three such maps of pointed varieties with $f_3 \equiv f_1 + f_2 \pmod{p}$ in $\CatOf{FormalGroups}(\G'/p, \G/p)$, then $f_3^* = f_1^* + f_2^*$ as maps $D(\G/A) \to D(\G'/A)$.  In the case that $k$ is a \emph{perfect} field, the universality of $A = \W_p(k)$ among infinitesimal deformations of $k$ emboldens us to make the following definition\footnote{In a more careful exposition, one might assign to each potential thickening and lift a ``Dieudonne module'', and then work to show that they all arise as base-changes of this universal one.}\todo{Maybe cite a reference that does this?}:
+Several well--behavedness results of the functor $D$ follow directly from \Cref{H1dRIsCrystalline}.  For instance, any map $f\co \G' \to \G$ of pointed varieties which is a group homomorphism mod $p$ restricts to give a map $f^*\co D(\G/A) \to D(\G'/A)$.  Additionally, if $f_1$, $f_2$, and $f_3$ are three such maps of pointed varieties with $f_3 \equiv f_1 + f_2 \pmod{p}$ in $\CatOf{FormalGroups}(\G'/p, \G/p)$, then $f_3^* = f_1^* + f_2^*$ as maps $D(\G/A) \to D(\G'/A)$.
+
+In the case that $k$ is a \emph{perfect} field, the ring $\W_p(k)$ of $p$--typical Witt vectors on $k$ is simultaneously torsion-free and universal among nilpotent thickenings of the residue field $k$.  This emboldens us to make the following definition:\footnote{There is a better definition one might hope for, which instead assigns to each potential thickening and lift a ``Dieudonne module'', and then work to show that they all arise as base-changes of this universal one.  This is possible and technically superior to the approach we are taking here.}\todo{Maybe cite a reference that does this?}
 
 \begin{definition}
-Let $k$ be a perfect field of characteristic $p > 0$, and let $\G_0$ be a $p$--divisible group over $k$ of finite height $d$.\todo{Does this actually fail for $\G_0 = \G_a$?}  Then, choose a lift $\G$ of $\G_0$ to $\W_p(k)$, and define the \textit{(contravariant) Dieudonn\'e module} of $\G_0$ by $M(\G_0) := D(\G / W(k))$.
+Let $k$ be a perfect field of characteristic $p > 0$, and let $\G_0$ be a formal group over $k$.  Then, choose a lift $\G$ of $\G_0$ to $\W_p(k)$, and define the \textit{(contravariant) Dieudonn\'e module} of $\G_0$ by $M(\G_0) := D(\G / W(k))$.\todo{This functor is best adapted to $p$--divisible groups, so typically $\G_0 = \G_a$ is disallowed. The definition and the most basic properties seem to work OK though...}
 \end{definition}
 
 \begin{remark}
@@ -484,9 +486,9 @@ This is independent of choice of lift up to coherent isomorphism.  Given any oth
 
 Finally, note that the module $M(\G_0)$ carries some natural operations:
 \begin{itemize}
-\item Arithmetic: $M(\G_0)$ is naturally a $\W_p(k)$--module.
+\item Arithmetic: $M(\G_0)$ is naturally a $\W_p(k)$--module, with the action by $\ell$ corresponding to multiplication--by--$\ell$ on $\G_0$.
 \item Frobenius: The map $x \mapsto x^p$ is a group homomorphism mod $p$, so by \Cref{H1dRIsCrystalline} induces a $\phi$--semilinear map $F\co M(\G_0) \to M(\G_0)$.  That is, $F(\alpha v) = \alpha^\phi F(v)$, where $\phi$ is a lift of the Frobenius on $k$ to $\W_p(k)$.
-\item Verschiebung: The Verschiebung map is given by the mysterious formula\todo{Is this a non-mysterious formula?} \[V\co \sum_{n=1}^\infty a_n x^n \mapsto p \sum_{n=1}^\infty a_{pn}^{\phi^{-1}} x^n.\] It satisfies anti-semilinearity, $aV(v) = V(a^\phi v)$, and also $FV = p$.
+\item Verschiebung: The Verschiebung map is given by the mysterious formula \[V\co \sum_{n=1}^\infty a_n x^n \mapsto p \sum_{n=1}^\infty a_{pn}^{\phi^{-1}} x^n.\] It satisfies anti-semilinearity, $aV(v) = V(a^\phi v)$, and also $FV = p$.
 \end{itemize}
 With this, we come to the main theorem of this section:
 
@@ -495,8 +497,26 @@ The functor $M$ determines a contravariant equivalence of categories between smo
 \end{theorem}
 
 \begin{remark}
-Several invariants of the formal group associated to a Dieudonn\'e module can be read off from the functor $M$.  For example, the $\W_p(k)$--rank of $M$ is equal to the $p$--height of $\G_0$.  Additionally, the quotient $M / FM$ is canonically isomorphic to the cotangent space $T_0^* \G_0 \cong \omega_{\G_0}$.  However, the subspace of $M$ spanned by $\omega_{\G}$ is \emph{sensitive to choice of lift}, unlike the rest of this construction.  This observation is the wellspring of the Gross--Hopkins period map.
+Several invariants of the formal group associated to a Dieudonn\'e module can be read off from the functor $M$.  For example, the $\W_p(k)$--rank of $M$ is equal to the $p$--height of $\G_0$.  Additionally, the quotient $M / FM$ is canonically isomorphic to the cotangent space $T_0^* \G_0 \cong \omega_{\G_0}$.
 \end{remark}
+
+\begin{example}
+The Dieudonn\'e module associated to $\G_m$ is the easiest to compute.  For $x$ the usual coordinate, we have $[p](x) = x^p$, and hence the Frobenius $F$ acts on $M(\G_m)$ by $Fx = px$.  It follows that $Vx = x$ and $M(\G_m) \cong \W_p(k)\{x\}$ with this action.
+\end{example}
+
+\begin{example}[{cf.\ \Cref{Alpha2Example}}]\label{WorkedAlpha2Example}
+\todo[inline]{This example is not done.}
+Dieudonn\'e theory admits an extension to finite (flat) group schemes as well, and the torsion quotient of the Dieudonn\'e module of a formal group agrees with the Dieudonn\'e module associated to its torsion subscheme: \[M(\G_0[p^j]) = M(\G_0) / p^j.\]  The \todo{Start by calculating $V$ for $\G_a$, use this to motivate the presence of torsion.} Dieudonn\'e module associated to $\G_a$ is the infinite--dimensional torsion $\W_p(k)$--module $M(\G_a) = k\{x, Fx, F^2 x, \ldots\}$.  Set $p = 2$, and consider the subgroup scheme $\alpha_2 \subseteq \G_a$ with Dieudonn\'e module \[M(\alpha_2) = M(\G_a) / F^2 = k\{x, Fx\}.\]  We can now verify the four claims from \Cref{Alpha2Example}:
+\begin{itemize}
+\item \textit{The group scheme $\alpha_2$ has the same underlying structure ring as $\mu_2 = \mathbb{G}_m[2]$ but is not isomorphic to it.}  This follows from calculating the Dieudonn\'e module of homomorphisms:
+% The easiest way to see this is that $\mathrm{Hom}(\mu_2, \mu_2) = \mathbb{Z}/2\mathbb{Z}$ but $\mathrm{Hom}(\alpha_2, \mu_2) = \alpha_2$ (these homs are in the category of affine group schemes and give out an affine group scheme).
+\item \textit{There is no commutative group scheme $G$ of rank four such that $\alpha_2 = G[2]$.}  This follows from calculating the space of rank four objects and noticing that $VF = 2$ gets you into trouble.
+\item \textit{If $E/\mathbb{F}_2$ is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence doesn't split (even after making a base change).}  This follows from calculating the action of $F$ and $V$: the exact sequence is split as modules, of course, but not as Dieudonn\'e modules.
+\item \textit{The subgroups of $\alpha_2 \times \alpha_2$ of order two are parameterized by $\mathbb{P}^1$.}  This follows from calculating the Dieudonn\'e module of the product, as well as its space of projections of the appropriate rank.
+\end{itemize}
+\end{example}
+
+We can also use Dieudonn\'e theory to compute the automorphism group of a fixed Honda formal group, which is information we wanted back in \Cref{ChromaticLocalizationSection}:
 
 \begin{corollary}\label{FormOfStabilizerGroup}
 For $\Gamma_d$ the Honda formal group law of height $d$ over $\F_{p^d}$, we compute \[\Aut \Gamma_d \cong \left. \W_p(k) \<F\> \middle/ \left( \begin{array}{c} Fw = w^\phi F, \\ F^d = p \end{array} \right) \right.^\times.\]
@@ -504,16 +524,6 @@ For $\Gamma_d$ the Honda formal group law of height $d$ over $\F_{p^d}$, we comp
 \begin{proof}
 The Dieudonn\'e module associated to $\Gamma_d$ satisfies $F^d = p$, and hence $M(\Gamma_d/k)$ is presented as a \emph{quotient} of the ring of operators on Dieudonn\'e modules.  The endomorphism ring of such a module is canonically isomorphic to the module itself.
 \end{proof}
-
-\begin{example}[{cf.\ \Cref{Alpha2Example}}]
-\todo{Finish writing this example.  Already I think I've written a contradiction.  Good grief.}
-Dieudonn\'e theory admits an extension to finite (flat) group schemes as well, and the torsion quotient of the Dieudonn\'e module of a formal group agrees with the Dieudonn\'e module associated to its torsion subscheme: \[M(\G_0[p^j]) = M(\G_0) / p^j.\]  Also, for $k$ a perfect field of characteristic $p$, \[M(\G_a) = \prod_{j=0}^\infty F^j k\] with $V$ acting trivially and $\W_p k$ acting through projection to $k$\citeme{Cf.\ Prop 6.9.3 of fmlgps}.
-\end{example}
-
-% \item $\alpha_2$ has the same underlying structure ring as $\mu_2 = \mathbb{G}_m[2]$\todo{You introduced this notation in class, but it hasn't been defined in this document yet.  See example 1.2.12.} but is not isomorphic to it.  The easiest way to see this is that $\mathrm{Hom}(\mu_2, \mu_2) = \mathbb{Z}/2\mathbb{Z}$\todo{How is $\mathbb{Z}/2\mathbb{Z}$ an affine group scheme?  Is it just $\mathrm{Spec}(\mathbb{F}_2)$?} but $\mathrm{Hom}(\alpha_2, \mu_2) = \alpha_2$ (these homs are in the category of affine group schemes and give out an affine group scheme).  \todo{for jhfung: work this out}
-% \item There is no commutative group scheme $G$ of rank four such that $\alpha_2 = G[2]$.
-% \item If $E/\mathbb{F}_2$ is the supersingular elliptic curve, then there is a short exact sequence $0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0$.  However, this short exact sequence doesn't split (even after making a base change).
-% \item The subgroups of $\alpha_2 \times \alpha_2$ of order two are parameterized by $\mathbb{P}^1$.  That is to say. if $R$ is an $\mathbb{F}_2$-algebra, then the subgroup schemes of $(\alpha_2 \times \alpha_2)_R$ of order two defined over $R$ are parameterized by $\mathbb{P}^1(R)$.
 
 We now turn to alternative presentations of the Dieudonn\'e module functor, which have their own advantages and disadvantages.  Let $\G$ again be a formal Lie group over a field $k$ of positive characteristic $p$, and consider Cartier's \textit{functor of curves} \[C\G = \CatOf{FormalSchemes}(\A^1, \G).\]  This is, again, a kind of relaxing of familiar data from Lie theory: rather than studying exponential curves, $C\G$ tracks all possible curves.  In \Cref{MfgI:Height}, we considered three kinds of operations on a given curve $\gamma\co \A^1 \to \G$:
 \begin{itemize}
@@ -557,10 +567,13 @@ Let $\CatOf{GradedDMods}$ denote the category of graded abelian groups $M$ satis
 \begin{enumerate}
 \item $M_{< 1} = 0$.
 \item If $n$ is odd, then $pM_n = 0$.
-\item There are homomorphisms $V\co M_{pn} \to M_n$ and $F\co M_n \to M_{pn}$ (where $n$ is even if $p \ne 2$), together satisfying $FV = p = VF$.
-\item (Combining these, if $n$ is even, taking the form $n = 2p^m k$ with $p \nmid k$ at odd primes $p$ or $n = 2^m k$ with $2 \nmid k$ at $p = 2$, then $p^{m+1} M_n = F^{m+1} V^{m+1} M_n = 0$.)
+\item There are homomorphisms $V\co M_{pn} \to M_n$ and $F\co M_n \to M_{pn}$ (where $n$ is even if $p \ne 2$), together satisfying $FV = p = VF$.  (These are induced by the inclusion $H(n) \subseteq H(pn)$ and by the map $H(pn) \to H(n)$ sending $x_n$ to $x_{n-1}^p$.)
 \end{enumerate}
 \end{definition}
+
+\begin{remark}
+Combining these, if $n$ is even, taking the form $n = 2p^m k$ with $p \nmid k$ at odd primes $p$ or $n = 2^m k$ with $2 \nmid k$ at $p = 2$, then $p^{m+1} M_n = F^{m+1} V^{m+1} M_n = 0$.
+\end{remark}
 
 \begin{theorem}
 The functor $D_*\co \CatOf{HopfAlgebras}^{>0, \fin}_{\F_p/} \to \CatOf{GradedDMods}$ defined by \[D_*(H) = \bigoplus_n D_n(H) = \bigoplus_n \CatOf{HopfAlgebras}^{>0, \fin}_{\F_p/}(H(n), H)\] is an exact equivalence of categories.  Moreover, $D_* H(n)$ is characterized by the equation \[\CatOf{GradedDMods}(D_* H(n), M) = M_n. \qed\]
@@ -582,6 +595,7 @@ The functor $D_*\co \CatOf{HopfAlgebras}^{>0, \fin}_{\F_p/} \to \CatOf{GradedDMo
 \todo{Definition of the inverse functor to the Dieudonn\'e module functor?  I think this appears in the formal groups notes.}
 \todo{We know of a connection between $H_* BU$ and the Witt scheme.  Is there a connection between $E_* MU$ and curves, or $E_* BP$ and $p$--typical curves, which is visible from this perspectve?  Almost definitely!  Also, a connection between curves and divisors: the zero locus of a given curve...}
 \todo{You could also try to give the Devinatz--Hopkins formula for the stabilizer action.  It's entirely a matter of different presentations of the Dieudonn\'e module... although it may require you to understand Dieudonn\'e crystals, which you are \emph{not} up for.}
+\todo{Include this remark:  However, the subspace of $M$ spanned by $\omega_{\G}$ is \emph{sensitive to choice of lift}, unlike the rest of this construction.  This observation is the wellspring of the Gross--Hopkins period map.}
 
 
 
