--- a/intro.tex
+++ b/intro.tex
@@ -15,10 +15,10 @@ To begin, we will define a homology theory called ``bordism homology''.  Recall 
 \end{align*}
 
 \begin{lemma}
-This forms a chain complex of monoids under direct sum of manifolds, ands it homology is written $MO_*(X)$.  These are naturally abelian groups, and moreover they satisfy the axioms of a generalized homology theory. \qed
+This forms a chain complex of monoids under direct sum of manifolds, and its homology is written $MO_*(X)$.  These are naturally abelian groups, and moreover they satisfy the axioms of a generalized homology theory. \qed
 \end{lemma}
 
-\todo{dshi: I'm confused about this paragraph. What is $X$ here? A sequence of groups? How does $O(n)$ relate to the $MO$ story above? 10min later: So $X$ is a structure group. There is a potential for confusion here cuz $X$ is a space above. Can you explain this part of the story to me (again) at office hours on Tuesday.} In fact, we can define a bordism theory $MX$ for any suitable family of structure groups $X_n \to O(n)$.  The coefficient ring of $MX$, or its value $MX_*(*)$ on a point, gives the ring of $X$--bordism classes, and generally $MX_*(Y)$ of some space $Y$ gives a kind of ``bordism in families (over $Y$)''.  There are evident comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain:\todo{dshi:I don't follow here. How does this replacement go explicitly? Somehow I understood it when you explained this to me in person but now I don't see it anymore.} \[MO \to H\Z/2, \quad MSO \to H\Z.\] In both cases, we can evaluate on a point to get ring maps $MO_*(*) \to \Z/2$ and $MSO_*(*) \to \Z$, called ``genera'' --- neither of which is very interesting, since they're both zero in positive degrees.\todo{A comparison of this with the usual spectrum definition of $MX$ appears in Switzer 12.35.}
+In fact, we can define a bordism theory $MG$ for any suitable family of structure groups $G(n) \to O(n)$.  The coefficient ring of $MG$, or its value $MG_*(*)$ on a point, gives the ring of $G$--bordism classes, and generally $MG_*(Y)$ of some space $Y$ gives a kind of ``bordism in families (over $Y$)''.  There are comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain:\todo{dshi:I don't follow here. How does this replacement go explicitly? Somehow I understood it when you explained this to me in person but now I don't see it anymore.} \[MO \to H\Z/2, \quad MSO \to H\Z.\] In both cases, we can evaluate on a point to get ring maps, called ``genera'': \[MO_*(*) \to \Z/2 \quad \text{and} \quad MSO_*(*) \to \Z,\] neither of which is very interesting, since they're both zero in positive degrees.\todo{A comparison of this with the usual spectrum definition of $MX$ appears in Switzer 12.35.}
 
 However, having maps of homology theories (rather than just maps of coefficient rings) is considerably more data then just the genus.  In fact, we can extract a theory of integration.  Consider the following special case of oriented bordism, where we evaluate $MSO_*$ on an infinite loopspace:
 \begin{align*}
@@ -33,17 +33,17 @@ Associated to such a representative $(M, \omega)$, the yoga of stable homotopy t
 & \xrightarrow{\mathmakebox[2.5em]{\mu}} H\Z,
 \end{align*}
 \todo{I changed $\S^0$ to $\S$ here, because that's what you used below, but it seems that the notation for the sphere spectrum has been inconsistent elsewhere too.}
-where $\phi$ is the orientation map.  Altogether, this composite gives us an element of $\pi_0 H\Z$, i.e., an integer.
+where $\phi$ is the orientation map.  Altogether, this composite gives us an element of $\pi_0 H\Z$, i.e., an integer.\todo{I used to think that this gave rise to a Stokes's Theorem, but now I'm not sure. Maybe this comes out of relative homology somehow.}
 
 \begin{lemma}
 The integer obtained by the above process is $\int_M \omega$. \qed
 \end{lemma}
 
-\noindent This definition of $\int_M \omega$ via stable homotopy theory is pretty nice, in the sense that many theorems accompany it for free.  For instance, the relation ``$\sim$'' automatically imposes a Stokes' theorem on it.\todo{I thought I knew how this worked, but now I'm not so sure.  How does this work?}
+\noindent This definition of $\int_M \omega$ via stable homotopy theory is pretty nice, in the sense that many theorems accompany it for free.
 
-Now take $X = e$ to be the trivial structure group, which is the bordism theory of manifolds with trivialized tangent bundle.  In this case, the Pontryagin--Thom construction gives an equivalence $Me \xrightarrow{\simeq} \S$.  It is thus possible (and some people have indeed taken up this viewpoint) that stable homotopy theory can be done solely through the lens of ``framed bordism''.  We will prefer to view this the other way: the sphere spectrum $\S$ often appears to us as a natural object, and we will occasionally replace it by $Me$, the framed bordism spectrum.  For example, given a ring spectrum $E$ with unit map $\S \to E$, we can reconsider this as a ring map $\S = Me \to E$.  Following along the lines of the previous paragraph, we learn that any ring spectrum $E$ is automatically equipped with a theory of integration for framed manifolds.
+Now take $G = e$ to be the trivial structure group, which is the bordism theory of manifolds with trivialized tangent bundle.  In this case, the Pontryagin--Thom construction gives an equivalence $\S \xrightarrow{\simeq} Me$.  It is thus possible (and some people have indeed taken up this viewpoint) that stable homotopy theory can be done solely through the lens of ``framed bordism''.  We will prefer to view this the other way: the sphere spectrum $\S$ often appears to us as a natural object, and we will occasionally replace it by $Me$, the framed bordism spectrum.  For example, given a ring spectrum $E$ with unit map $\S \to E$, we can reconsider this as a ring map $\S = Me \to E$.  Following along the lines of the previous paragraph, we learn that any ring spectrum $E$ is automatically equipped with a theory of integration for framed manifolds.
 
-Sometimes, as in the examples above, this unit map factors: \[\S = Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.  Given any ring spectrum $E$, we can ask the analogous question: If we filter $O$ by a system of structure groups, at what stage does the unit map $Me \to E$ factor through?  For instance, the map \[\S = Me \to MSO \to H\Z\] considered above does \emph{not} factor further through $MO$ --- an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  In the more general case, the map $SO \to O$ is the beginning of the Postnikov filtration of $O$, \todo{danny: do you mean postnikov filtration for $MO$? I asked this in class but I think it's good to say how does the filtration go. The classical postnikov filtration for $X$ builds the homotopy groups of $X$ up from the bottom, to get a sequence $\cdots \to X_2 \to X_1 \to X_0$, with $X$ the limit. I think the situation here is the opposite? We'll talk about this.} and we now present a diagram of this filtration and some interesting integration theories related to it:
+Sometimes, as in the examples above, this unit map factors: \[\S = Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of $H\Z/2$'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It's literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum $E$, we can ask the analogous question: If we filter $O$ by a system of structure groups, at what stage does the unit map $Me \to E$ factor through?  For instance, the map \[\S = Me \to MSO \to H\Z\] considered above does \emph{not} factor further through $MO$ --- an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  In the more general case, the map $SO \to O$ is the beginning of the Postnikov filtration of $O$, \todo{danny: do you mean postnikov filtration for $MO$? I asked this in class but I think it's good to say how does the filtration go. The classical postnikov filtration for $X$ builds the homotopy groups of $X$ up from the bottom, to get a sequence $\cdots \to X_2 \to X_1 \to X_0$, with $X$ the limit. I think the situation here is the opposite? We'll talk about this.} and we now present a diagram of this filtration and some interesting integration theories related to it:
 \begin{center}
 \begin{tikzcd}
 Me \arrow{r} \arrow{rrd} \arrow{rrrd} \arrow{rrrrd} & \cdots \arrow{r} & M\Spin \arrow{r} \arrow[crossing over]{d} & MSO \arrow{r} \arrow[crossing over]{d} & MO \arrow[crossing over]{d} \\
@@ -58,7 +58,9 @@ This is the situation homotopy theorists found themselves in some decades ago, w
 There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if $M$ is a Spin manifold such that twice its first Pontryagin class vanishes --- that is, if $M$ lifts to a $\String$--manifold --- then $\sigma(M)$ lands in the subring $MF \subseteq \Z\ps{q}$ of modular forms with integral coefficients. \qed
 \end{theorem}
 
-\noindent However, neither party gave indication that their result should be valid ``in families'', and no theory of integration was produced.  From the perspective of the homotopy theorist, it wasn't even totally clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum $E$ such that $E_*(*)$ had something to do with modular forms.  Around the same time, Landweber, Ravenel, and Stong began studying ``elliptic cohomology'' for independent reasons; sometime much earlier, Morava had constructed an object ``$K^{\Tate}$'' associated to the Tate elliptic curve; and a decade later Ando, Hopkins, and Strickland put all these things together in the following theorem:
+\noindent However, neither party gave indication that their result should be valid ``in families'', and no theory of integration was produced.  From the perspective of the homotopy theorist, it wasn't even totally clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum $E$ such that $E_*(*)$ had something to do with modular forms.
+
+Around the same time, Landweber, Ravenel, and Stong began studying ``elliptic cohomology'' for independent reasons; sometime much earlier, Morava had constructed an object ``$K^{\Tate}$'' associated to the Tate elliptic curve; and a decade later Ando, Hopkins, and Strickland put all these things together in the following theorem:
 
 \begin{theorem}[Ando--Hopkins--Strickland]
 If $E$ is an ``elliptic cohomology theory'', then there is a canonical map $M\String \to E$ called the $\sigma$--orientation.  In particular, the map $M\String_* \to K^{\Tate}_*$ is Witten's genus. \qed
@@ -76,16 +78,18 @@ Leaving aside the extension problem for the moment, their main theorem is the fo
 For $E$ an even--periodic cohomology theory, \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``$C^3(\G_E; \sheaf I(0))$'' is a certain scheme.  When $E$ is taken to be elliptic, so that there is a specified isomorphism $\G_E \cong C^\wedge_0$ for $C$ an elliptic curve, the theory of elliptic curves furnishes the scheme with a canonical point.  Hence, there is a preferred class $MU[6, \infty) \to E$, natural in the choice of elliptic $E$. \qed
 \end{theorem}
 
-\noindent Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something in the domain of homotopy theory.  The structure of the class will be to work through a sequence of case studies where this perspective shines through most brightly.  We'll start by working through Thom's calculation of the homotopy of $MO$, which simultaneously holds the attractive features of being free of technical complexity while revealing essentially all of the structural complexity.  Having seen that through to the end, we'll then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the theorem above and its extensions.  The overriding theme of the class will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions.  In particular, it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
+\noindent Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something squarely in the domain of homotopy theory.
+
+The structure of the class will be to work through a sequence of case studies where this perspective shines through most brightly.  We'll start by working through Thom's calculation of the homotopy of $MO$, which holds the simultaneous attractive features of being approachable while revealing essentially all of the structural complexity.  Having seen that through to the end, we'll then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the theorem above and its extensions.  The overriding theme of the class will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions.  In particular, it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
 
 We should also mention that we will specifically \emph{not} discuss the following aspects of this story:
 \begin{itemize}
 \item Analytic techniques will be completely omitted.  Much of modern research stemming from the above problem is an attempt to extend index theory across Witten's genus, and this often means heavy analytic work.  We will strictly confine ourselves to the domain of homotopy theory.
-\item As sort of a sub-point (and despite the motivation provided in this Introduction), we will also mostly avoid manifold geometry.  (We do give a proof of Quillen's theorem on the structure of $MU_*$ which invokes some mild amount of manifold geometry.)  Again, much of the contemporary research about $\tmf$ is an attempt to find a geometric model, so that geometric techniques can be imported --- including equivariance and the geometry of quantum field theories, to name two.
+\item As sort of a sub-point (and despite the motivation provided in this Introduction), we will also mostly avoid manifold geometry.  (We do give a proof of Quillen's theorem on the structure of $MU_*$ which invokes some mild amount of manifold geometry.)\todo{If Jeremy's proof changes this, update this sentence.}  Again, much of the contemporary research about $\tmf$ is an attempt to find a geometric model, so that geometric techniques can be imported --- including equivariance and the geometry of quantum field theories, to name two.
 \item In a different direction, our focus will not linger on actually computing bordism rings $MX_*$, nor will we consider geometric constructions on manifolds and their behavior after imagining\todo{imagining??} into the bordism ring.  This is also the source of active research: the structure of the symplectic bordism ring remains, to large extent, mysterious, and what we do understand of it comes through a mix of formal geometry and raw manifold geometry.  This could be a topic that fits logically into this document, were it not for time limitations and the author's inexpertise.
-\item The geometry of $E_\infty$ rings will also be avoided.  These really are inescapable at the conclusion of the story we will tell here, but there are better resources from which to learn about $E_\infty$ rings, and the pre--$E_\infty$ story is not told so often these days.  So, we will focus on the unstructured part and leave $E_\infty$ rings to other authors.
+\item The geometry of $E_\infty$ rings will also be avoided, at least to the extent possible.  Such objects become inescapable by the conclusion of our story, but there are better resources from which to learn about $E_\infty$ rings, and the pre--$E_\infty$ story is not told so often these days.  So, we will focus on the unstructured part and leave $E_\infty$ rings to other authors.
 \end{itemize}
 
-Finally, we will also mention good companions to these notes.  Essentially none of the material here is original --- it's almost all cribbed either from published or unpublished sources --- but the source documents are quite scattered and dense.  We will make a point to cite useful references as we go.  One document stands out above all others, though: Neil Strickland's \textit{Functorial Philosophy for Formal Phenomena}~\cite{StricklandFPFP}.  These lecture notes can basically be viewed as an attempt to make it through this paper in the span of a semester.
+Finally, we must mention that there are several good companions to these notes.  Essentially none of the material here is original --- it's almost all cribbed either from published or unpublished sources --- but the source documents are quite scattered and individually dense.  We will make a point to cite useful references as we go.  One document stands out above all others, though: Neil Strickland's \textit{Functorial Philosophy for Formal Phenomena}~\cite{StricklandFPFP}.  These lecture notes can basically be viewed as an attempt to make it through this paper in the span of a semester.
 
 \todo{Akhil wrote a couple of blog posts about Ochanine's theorem: \texttt{https://amathew.wordpress.com/2012/05/30/ochanines-theorem-on-elliptic-genera/} and \texttt{https://amathew.wordpress.com/2012/05/31/the-other-direction-of-ochaines-theorem/}. Mentioning a more precise result might lend to a more beefy introduction.}
