work through the first half of Lecture 4.7
still need to smooth out the hopkins-lurie stuff, i think mostly about
their Ext lemma

--- a/sigma.tex
+++ b/sigma.tex
@@ -57,6 +57,11 @@ Section 6.2 of FSFG: Free formal groups and how the free pointed monoid on a for
 
 
 
+Talk about \Cref{KHomologyOfClassifyingSpace} and the coalgebraic scheme associated to $K_*(BS^1[p^j])$.
+
+
+
+
 
 
 Use this to construct the various stable divisor schemes and verify the freeness assertions about them (i.e., compare with the homology of $BU$)
